# flight-recorder

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: index.html
examples/: demo.py
flightrec/: __init__.py  cli.py  regression.py  replay.py  scoring.py  sdk.py  server.py  store.py
tests/: conftest.py  test_regression.py  test_replay.py  test_scoring.py  test_sdk.py  test_store.py
